--- a/Login.html
+++ b/Login.html
@@ -28,7 +28,7 @@
                     </div>
 
                     <div class="input-field button">
-                        <button class="button" type="submit">Login</button>
+                        <button onclick="entrar()" class="button" type="submit">Login</button>
 
                     </div>
                     <div class="login-signup">
