--- a/cadastro.html
+++ b/cadastro.html
@@ -44,7 +44,7 @@
                             <p></p>
                         </div>
                         <div class="input-field button">
-                            <button class="buttons" type="submit">Criar Cadastro</button>
+                            <button onclick() class="buttons" type="submit">Criar Cadastro</button>
     
                         </div>
                         <div class="login-signup">
