--- a/recados.html
+++ b/recados.html
@@ -13,17 +13,20 @@
     <header>
         <h1>Meus Recados</h1>
     </header>
-    <div class="container">
-        <div class="descricao">
-            <input type="text" id="description" placeholder="Descrição" required>
+    <form action="">
+        <div class="container">
+            <div class="descricao">
+                <input type="text" id="description" placeholder="Descrição" required>
+            </div>
+            <div class="detalhe">
+                <input type="text" name="detail" id="detail" placeholder="Detalhamento">
+            </div>
+            <div class="btn">
+                <button type="submit">Salvar</button>
+                <button type="submit">Logout</button>
+            </div>
         </div>
-        <div class="detalhe">
-            <input type="text" name="detail" id="detail" placeholder="Detalhamento">
-        </div>
-        <div class="btn">
-            <button type="submit">Salvar</button>
-        </div>
-    </div>
+    </form>
     <hr>
     <div class="table">
         <table>
